fuckup nights data added

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Wechat H5 Boilerplate</title>
+    <title>FUckup NIGHTS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://apps.bdimg.com/libs/fontawesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" href="./css/swiper.min.css">
     <link rel="stylesheet" href="./css/animate.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -34,18 +35,81 @@
 
     <div class="swiper-wrapper">
         <div class="swiper-slide slide-1">
-          <h2 class="animated" data-ani-name="zoomInDown" data-ani-duration="1s" data-ani-delay="0.5s">Change your life!</h2>
-          <img class="animated" src="./images/github-1.png" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="1s">
+          <h2 class="animated" data-ani-name="zoomInDown" data-ani-duration="1s" data-ani-delay="0.5s">
+            FUckup NIGHTS
+          </h2>
+          <img class="animated" src="./images/human-fall.png" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="1s">
           <!-- get all animation names from https://daneden.github.io/animate.css/ -->
         </div>
         <div class="swiper-slide slide-2">
-          <h2 class="animated" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="0.5s">Learn to code!</h2>
-          <img class="animated" src="./images/github-2.png" data-ani-name="zoomInDown" data-ani-duration="1s" data-ani-delay="1s">
+          <h2 class="animated" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="0.5s">
+            BENOIT RAOULT
+          </h2>
+          <div>
+            <img src="images/me-square.jpeg" alt="tom" class="img-profile img-circle animated" data-ani-name="flipInX" data-ani-duration="1s" data-ani-delay="0.5s">
+          </div>
+          <p class="text-center animated" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="0.5">
+            FROM HONEY MOON TO DIVORCE <br> THE IMPORTANCE OF VALUE ALIGNMENT
+          </p>
         </div>
+        <div class="swiper-slide slide-2">
+          <h2 class="animated" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="0.5s">
+            GRACE NG
+          </h2>
+          <div>
+            <img src="images/me-square.jpeg" alt="tom" class="img-profile img-circle animated" data-ani-name="flipInX" data-ani-duration="1s" data-ani-delay="0.5s">
+          </div>
+          <p class="text-center animated" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="0.5">
+            DE-RISKING YOUR BUSINESS IDEAS
+          </p>
+        </div>
+        <div class="swiper-slide slide-2">
+          <h2 class="animated" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="0.5s">
+            RONAN BERDER
+          </h2>
+          <div>
+            <img src="images/me-square.jpeg" alt="tom" class="img-profile img-circle animated" data-ani-name="flipInX" data-ani-duration="1s" data-ani-delay="0.5s">
+          </div>
+          <p class="text-center animated" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="0.5">
+            FUCKING UP EARLY AND OFTEN
+          </p>
+        </div>
+        <div class="swiper-slide slide-2">
+          <h2 class="animated" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="0.5s">
+            AARON WALLACE
+          </h2>
+          <div>
+            <img src="images/me-square.jpeg" alt="tom" class="img-profile img-circle animated" data-ani-name="flipInX" data-ani-duration="1s" data-ani-delay="0.5s">
+          </div>
+          <p class="text-center animated" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="0.5">
+            DON'T BLAME THE BABY
+          </p>
+        </div>
+          <!--  <div class="swiper-slide slide-2">
+          <h2 class="animated" data-ani-name="bounceInUp" data-ani-duration="1s" data-ani-delay="0.5s">
+            Speakers
+          </h2>
+          <div class="profile">
+            <img src="images/me-square.jpeg" alt="tom" class="img-profile img-circle img-float-left">
+            <p>BENOIT RAOULT</p>
+          </div>
+          <div class="clearfix"></div>
+          <div class="profile">
+            <img src="images/me-square.jpeg" alt="tom" class="img-profile img-circle img-float-right">
+            <p>Lorem ipsum dolor sit amet, consectet</p>
+          </div>
+          <div class="clearfix"></div>
+          <div class="profile">
+            <img src="images/me-square.jpeg" alt="tom" class="img-profile img-circle img-float-left">
+            <p>asdfasdfasdfasdfasdf</p>
+          </div>
+          <div class="clearfix"></div>
+        </div> -->
         <div class="swiper-slide slide-3">
-          <h2 class="animated" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="0.5s">Join our journey...</h2>
-          <img class="animated" src="./images/github-3.png" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="1s">
+          <h2 class="animated" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="0.5s">Reserve your SEAT!!</h2>
+          <img class="animated" src="./images/qr-code.jpeg" data-ani-name="flipInY" data-ani-duration="1s" data-ani-delay="1s">
         </div>
+
     </div>
 </div>
 
